codex-rs/tui/src/bottom_pane/snapshots/codex_tui__bottom_pane__feedback_view__tests__feedback_upload_consent_lists_supported_attachments.snap
---
source: tui/src/bottom_pane/feedback_view.rs
assertion_line: 722
expression: rendered
---
Upload logs?

The following files will be sent:
  • codex-logs.log
  • codex-apps-tools-cache.json (if available)
  • codex-app-directory-cache.json (if available)
  • rollout.jsonl
  • auto-review-rollout.jsonl
